got buttons styled, still issues with boostrap

--- a/gentle_reminder/app/assets/stylesheets/goals.css.scss
+++ b/gentle_reminder/app/assets/stylesheets/goals.css.scss
@@ -163,3 +163,8 @@ input[type=password]{
           box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
 }
 
+//UL stuff
+li{
+	list-style-type: none;
+	color: $deep-teal;
+}
