--- a/gentle_reminder/app/views/users/show.html.erb
+++ b/gentle_reminder/app/views/users/show.html.erb
@@ -1,31 +1,14 @@
 <!-- This page is mostly complete. -->
 
-<div class = "center-column">
-
-<div class = "bump2">
-	<div class = "emphasis-box">
+<div class= "col-md-6">
 		<h1 class = "github-access">Welcome, <%=@user.name%>!</h1>
 
 		<p>Gentle reminder helps track your goals through quantifiable means, primarily GitHub.  Help us help you by giving us your GitHub information.  Thanks!</p>
-		<div class = "centered">
+		<br>
 		<%= form_for(@user) do |f| %>
-			<div class = "col-12">
-			    <div class = "shoveit">
 				    <%= render 'shared/error_messages' %>
 				    <%=f.label "What is your Github username?" %>
-			    </div>
-				<div class = "shoveit">
 				    <%=f.text_field :github_name%> 
-				</div>
-			</div>
-
-		    <div class = "shoveit">
-		    	<div class = "centered">
 				    <%= f.submit "That's it" %>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
 </div>
 	<%end%>
