--- a/gentle_reminder/app/assets/stylesheets/users.css.scss
+++ b/gentle_reminder/app/assets/stylesheets/users.css.scss
@@ -65,7 +65,7 @@ a:visited {
 //FONTS
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'portersans', helvetica, arial, sans-serif;
-	// color: yellow;
+	color: $gray-green;
 }
 
 h1.title {
@@ -162,4 +162,8 @@ input[type=password]{
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
           box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
 }
+
+ select {
+    background: $mint-green !important;
+  }
 
