--- a/gentle_reminder/app/views/layouts/application.html.erb
+++ b/gentle_reminder/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 	<div class = "container">
 		<div class = "row">
-			<div class="col-md-8 .col-md-offset-2">
+			<div class="col-md-8">
 				<h1 class = "title">GENTLE REMINDER</h1>
 				<h1 class = "subtitle">Commit to doing more.</h1>
 					<% if signed_in? %>
@@ -30,6 +30,7 @@
 						<span><%= value %></span>
 					<% end %>
 			</div>
+
 
 				<%= yield %>
 
