--- a/gentle_reminder/app/views/goals/index.html.erb
+++ b/gentle_reminder/app/views/goals/index.html.erb
@@ -1,12 +1,12 @@
-<!-- There's something wacky going on here in the left column with height/margins.  Correct it. -->
+
 <div class = "row">
   <div class= "col-md-6">
-      <h2> MY GOALS</h2>
+      <h1 class ="heavy"> MY GOALS</h1>
       <h3><%= link_to "Create a goal now!", new_user_goal_path %></h3>
   </div>
 
   <div class= "col-md-6">
-      <h2>MY STATS</h2>
+      <h1 class ="heavy">MY STATS</h1>
        <% @goals_array.each do |goal_hash| %>
          <ul>
           <li><h3><%= goal_hash[:goal_key].goal_type.name %></h3></li>
