--- a/gentle_reminder/app/assets/stylesheets/users.css.scss
+++ b/gentle_reminder/app/assets/stylesheets/users.css.scss
@@ -1,31 +1,34 @@
 // Place all the styles related to the sessions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 @font-face {
-	font-family: 'portersans';
-	src: url('fonts/portersans/porter-sans-inline-block-webfont.eot'); /* IE9 Compat Modes */
-	src: url('fonts/portersans/porter-sans-inline-block-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-	     url('fonts/portersans/porter-sans-inline-block-webfont.woff') format('woff'), /* Modern Browsers */
-	     url('fonts/portersans/porter-sans-inline-block-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-	     url('fonts/portersans/porter-sans-inline-block-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
-	}
+  font-family: 'portersans';
+  src:font-url('/fonts/portersans/porter-sans-inline-block-webfont.eot');
+  src:font-url('/fonts/portersans/porter-sans-inline-block-webfont.eot?#iefix') format('embedded-opentype'),
+      font-url('/fonts/portersans/porter-sans-inline-block-webfont.svg#icomoon') format('svg'),
+      font-url('/fonts/portersans/porter-sans-inline-block-webfont.woff') format('woff'),
+      font-url('/fonts/portersans/porter-sans-inline-block-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 @font-face {
 	font-family: 'turnpike';
-	src: url('fonts/turnpike/turnpike-webfont.eot'); /* IE9 Compat Modes */
-	src: url('fonts/turnpike/turnpike-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-	     url('fonts/turnpike/turnpike-webfont.woff') format('woff'), /* Modern Browsers */
-	     url('fonts/turnpike/turnpike-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-	     url('fonts/turnpike/turnpike-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+	src: url('/fonts/turnpike/turnpike-webfont.eot'); /* IE9 Compat Modes */
+	src: url('/fonts/turnpike/turnpike-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	     url('/fonts/turnpike/turnpike-webfont.woff') format('woff'), /* Modern Browsers */
+	     url('/fonts/turnpike/turnpike-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+	     url('/fonts/turnpike/turnpike-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 	}
 
 @font-face {
 	font-family: 'minimal';
-	src: url('fonts/minimal/minimal-webfont.eot'); /* IE9 Compat Modes */
-	src: url('fonts/minimal/minimal-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-	     url('fonts/minimal/minimal-webfont.woff') format('woff'), /* Modern Browsers */
-	     url('fonts/minimal/minimal-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-	     url('fonts/minimal/minimal-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+	src: url('/fonts/minimal/minimal-webfont.eot'); /* IE9 Compat Modes */
+	src: url('/fonts/minimal/minimal-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	     url('/fonts/minimal/minimal-webfont.woff') format('woff'), /* Modern Browsers */
+	     url('/fonts/minimal/minimal-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+	     url('/fonts/minimal/minimal-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 	}
 
 
