--- a/gentle_reminder/app/views/users/new.html.erb
+++ b/gentle_reminder/app/views/users/new.html.erb
@@ -1,9 +1,12 @@
 <!-- Page Complete for styling 2/8 -->
 
 
-	<div class= "md-col-6 col-md-offset-5">
+	<div class= "md-col-6 col-md-offset-4">
 		<h1>Sign up now</h1>
 		<h3>Its free and easy!</h3>
+
+		<div class = "row">
+			<div class = "col-md-10 col-md-offset-1">
 			<%= form_for(@user) do |f| %>
 				<%= render 'shared/error_messages' %>
 				<%=f.label :name %>
@@ -26,6 +29,8 @@
 				<br>
 				<br>
 				<%= f.submit "Create Account" %>
+			</div>
+		</div>
 	</div>
 
 
