--- a/gentle_reminder/app/assets/stylesheets/general.css
+++ b/gentle_reminder/app/assets/stylesheets/general.css
@@ -25,7 +25,7 @@
   box-sizing: border-box; }
 
 body {
-  background-color: azure;
+  background-color: white;
   color: #6a7f78;
   line-height: 1.2em;
   font-size: 1em;
