--- a/gentle_reminder/app/views/users/new.html.erb
+++ b/gentle_reminder/app/views/users/new.html.erb
@@ -1,39 +1,37 @@
-<!-- Page Complete for styling 2/8 -->
 
 
-<!-- 	<div class= "md-col-6 col-md-offset-4"> -->
-<div class="sign_in">
-	<div class="signin_title">
-		<h1>Sign up now</h1>
-		<h3>Its free and easy!</h3>
-	</div>
-		
-			<div class = "hello">
-			<%= form_for(@user) do |f| %>
-				<%= render 'shared/error_messages' %>
-				<%=f.label :name %>
-				<br>
-				<%=f.text_field :name%> 
-				<br>
-				<%=f.label :email %>
-				<br>
-				<%=f.text_field :email%>
-				<br>
-				<%=f.label :password %>
-				<br>
-				<%=f.password_field :password%> 
-		
-			<!-- make password_conf work -->
-				<br>
-				<%=f.label :password_confirmation %>
-				<br>
-				<%=f.password_field :password%>
-				<br>
-				<br>
-				<%= f.submit "Create Account" %>
+<div class="alt0">
+		<div class="container">
+			<div class="jumbotron small text-center">
+				<h1><a href="#" id="nav--we">We</a></h1>
 			</div>
+		</div> 
+	</div> 
+<div class="alt">
+	<div class="container">
+		<div class="jumbotron small text-center">
+			<h1><a href="#" id="nav--listen">Commit</a></h1>
+		</div>
+	</div> 
+</div> 
+<div class="alt1">
+	<div class="container">
+		<div class="jumbotron small text-center">
+			<h1><a href="#" id="nav--design">To Doing</a></h1>
+		</div>
+	</div> 
+</div> 
+<div class="alt2">
+	<div class="container">
+		<div class="jumbotron small text-center">
+			<h1><a href="#" id="nav--build">More</a></h1>
+		</div>
+	</div> 
 </div> 
 
+<footer>
+	&nbsp
+</footer>
 
+<!-- sign up was here --> 
 
-<%end%>
