--- a/gentle_reminder/app/assets/stylesheets/main.css
+++ b/gentle_reminder/app/assets/stylesheets/main.css
@@ -1,14 +1,27 @@
 body{
 	background-color: white;
+  /*background-color: #16a085;*/
 }
 
 h1.title{
 	font-size: 450%;
+	text-align: center;
+	color:white;
+}
+
+h2.subtitle{
+  color:#c0c0c0;
 }
 
 .sign_in{
-	margin: auto;
-	border: 1px solid red;
+	
+	/*padding: 0 -50px;*/
+}
+
+.signin-container{
+	margin: auto 250px;
+	border: 1px solid #A2B9CC;
+	background-color:#A2B9CC;
 }
 
 .signin_title{
@@ -16,5 +29,82 @@ h1.title{
 }
 
 .hello{
-	margin:auto 400px;
+	text-align: center;
+	/*margin:auto ;*/
 }
+
+.home{
+  background: cover;
+	background-color: #16a085;
+  /*background-color: white*/
+  padding-top: 10px;
+  
+}
+
+
+.header-titles{
+	text-align: center;
+}
+
+footer{
+  padding: 0 -60px;
+}
+
+.heavy{
+  text-align: center;
+}
+
+.jumbotron {
+  background-color: transparent;
+  border-radius: none;
+  margin-bottom: 0; }
+  .jumbotron.small {
+    padding: 20px; }
+  .jumbotron h1 {
+    text-shadow: 3px 0 3px rgba(0, 0, 0, 0.1), 2px 0 2px rgba(0, 0, 0, 0.1), 1px 0 1px rgba(0, 0, 0, 0.1);
+    line-height: 1.3;
+    margin: 10px 0 0 0;
+    font-weight: 700;
+    font-size: 30px; }
+
+.alt0 {
+  background-color: #A2B9CC;
+  box-shadow: rgba(255, 255, 255, 0.8) 0 1px 0, inset rgba(0, 0, 0, 0.05) 0 1px 0; }
+  .alt0 h1 {
+    color: #fff; }
+
+.alt {
+  background-color: #778FA6;
+  box-shadow: rgba(255, 255, 255, 0.8) 0 1px 0, inset rgba(0, 0, 0, 0.05) 0 1px 0; }
+  .alt h1 {
+    color: #fff; }
+
+.alt1 {
+  background-color: #6586A6;
+  box-shadow: rgba(255, 255, 255, 0.8) 0 1px 0, inset rgba(0, 0, 0, 0.05) 0 1px 0; }
+  .alt1 h1 {
+    color: #fff; }
+
+.alt2 {
+  background-color: #25394D;
+  box-shadow: rgba(255, 255, 255, 0.8) 0 1px 0, inset rgba(0, 0, 0, 0.05) 0 1px 0; }
+  .alt2 h1 {
+    color: #fff; }
+
+.alt h1 a,
+.alt0 h1 a,
+.alt1 h1 a,
+.alt2 h1 a {
+  position: relative;
+  text-decoration: none;
+  width: 100%;
+  display: block;
+  color: inherit; }
+  .alt h1 a:hover:after,
+  .alt0 h1 a:hover:after,
+  .alt1 h1 a:hover:after,
+  .alt2 h1 a:hover:after {
+    content: "â†’";
+    position: absolute;
+    right: 10px; }
+
