--- a/gentle_reminder/app/views/goals/index.html.erb
+++ b/gentle_reminder/app/views/goals/index.html.erb
@@ -1,33 +1,41 @@
 
-<div class = "row">
-  <div class= "col-md-6">
-      <h1 class ="heavy"> MY GOALS</h1>
+<!-- <div class = "row">
+  <div class= "col-md-6"> -->
+      <!-- <h1 class ="heavy"> MY GOALS</h1> -->
       <h3><%= link_to "Create a goal now!", new_user_goal_path %></h3>
-  </div>
+<!--   </div> -->
 
-  <div class= "col-md-6">
-      <h1 class ="heavy">MY STATS</h1>
+  <!-- <div class= "col-md-6"> -->
+      <h1 class ="heavy">Goals</h1>
        <% @goals_array.each do |goal_hash| %>
-    <ul>
-        <li><h3>Goal Title: <%= goal_hash[:goal_key].name %></h3></li>
-        
-        <h3>Finish Date</h3>
-          <li><h3 class = "turnpike">Finish Date: <%= goal_hash[:date] %></h3></li>
-        
-        <h3>Repo Name</h3>
-          <li><h3 class = "turnpike">Repo Name: <%= goal_hash[:goal_key].repo%></h3> </li>
-        
-        <h3>Total Commits</h3>
-          <li><h3 class = "turnpike">My Commits: <%= goal_hash[:goal_key].commitments %></h3></li>
-      	
-        <h3>Commits This Week</h3>
-          <li><h3 class = "turnpike"> Past week commits: <%= @weekly_commits%></h3> </li>
-    </ul>
+    <div class="container">
+    <div class="table-responsive">
+    <table class="table table-hover table-bordered">
+      <thead>
+        <tr>
+        <th> Goal</th>
+        <th> Completion Date</th>
+        <th> Repo Name</th>
+        <th> Commit Goal</th>
+        <th> Current Commits</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+        <td><%= goal_hash[:goal_key].name %></td>
+        <td> <%= goal_hash[:date] %></td>
+        <td><%= goal_hash[:goal_key].repo%></td>
+        <td><%= goal_hash[:goal_key].commitments %></td>
+        <td><%= @weekly_commits%></td>
+        </tr>
+      </tbody>
+    </table>
   </br></br>
       <% end %>
-   
   </div>
+   </div>
+ <!--  </div>
 
-</div>
+</div> -->
 
 
