--- a/gentle_reminder/app/assets/stylesheets/main.css
+++ b/gentle_reminder/app/assets/stylesheets/main.css
@@ -38,7 +38,6 @@ h2.subtitle{
 	background-color: #16a085;
   /*background-color: white*/
   padding-top: 10px;
-  
 }
 
 
@@ -47,13 +46,19 @@ h2.subtitle{
 }
 
 footer{
-  padding: 0 -60px;
+  height:0px;
+
 }
 
 .heavy{
   text-align: center;
 }
 
+.goal-track-container{
+  border: 1px solid grey;
+  text-align: center;
+  margin: auto 75px;
+}
 .jumbotron {
   background-color: transparent;
   border-radius: none;
@@ -104,7 +109,7 @@ footer{
   .alt0 h1 a:hover:after,
   .alt1 h1 a:hover:after,
   .alt2 h1 a:hover:after {
-    content: "â†’";
+    content: url(calendar.jpeg);
     position: absolute;
     right: 10px; }
 
