--- a/gentle_reminder/app/views/goals/index.html.erb
+++ b/gentle_reminder/app/views/goals/index.html.erb
@@ -1,15 +1,8 @@
-
-<!-- <div class = "row">
-  <div class= "col-md-6"> -->
-      <!-- <h1 class ="heavy"> MY GOALS</h1> -->
-      <h3><%= link_to "Create a goal now!", new_user_goal_path %></h3>
-<!--   </div> -->
-
-  <!-- <div class= "col-md-6"> -->
-      <h1 class ="heavy">Goals</h1>
-       <% @goals_array.each do |goal_hash| %>
-    <div class="container">
-    <div class="table-responsive">
+<button type="button" class="btn btn-default"><%= link_to "Create a goal now!", new_user_goal_path %></button>
+<h1 class ="heavy">Tracked Goals</h1>
+<% @goals_array.each do |goal_hash| %>
+<div class="container">
+  <div class="table-responsive">
     <table class="table table-hover table-bordered">
       <thead>
         <tr>
@@ -30,12 +23,8 @@
         </tr>
       </tbody>
     </table>
-  </br></br>
       <% end %>
   </div>
-   </div>
- <!--  </div>
-
-</div> -->
-
+</div>
+ 
 
